changes in-class 9

--- a/In-class_Exercise/In-class_Ex09.qmd
+++ b/In-class_Exercise/In-class_Ex09.qmd
@@ -30,15 +30,18 @@ Coffee Chain.mdb dataset is used for the purpose of this exercise.
 
 ## **2. Bullet Graph**
 
-Building a bullet graph in Tableau is pretty easy, just click on "Show Me" and select the bullet graph.
+Building a bullet graph in Tableau is pretty easy, just click on "Show Me" and select the bullet graph.<b>
+
 ![](images/in-class9-1.png){width="80%," fig.align="center"}
 
 ## **3. Sparkline**
-Creating a sparkline in Tableau with max and min point
+Creating a sparkline in Tableau with max and min point <b>
+
 ![](images/in-class9-2.png){width="60%," fig.align="center"}
 
 ## **4. Dashboard**
-Combining the 2 graphs to create a dashboard
-![](images/in-class9-2.png){width="60%," fig.align="center"}
+Combining the 2 graphs to create a dashboard<b>
+
+![](images/in-class9-3.png){width="60%," fig.align="center"}
 
 
